# internship-effective-mobile

./: .env  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
certs/: jwt
migrations/: env.py
migrations/versions/: #1users_and_scopes.py  #2users_fix_pass.py
src/: config.py  logger.py  main.py  redis_conn.py
src/api/routers/: __init__.py  admin.py  auth.py  product.py  users.py
src/db/: adminManager.py  base.py  connection.py  userManager.py
src/middlewares/: authMiddleware.py  loggingMiddleware.py
src/models/: __init__.py  base.py  scope_group_scopes.py  scope_groups.py  scopes.py  user_scopes.py  users.py
src/schemes/: scopes.py  users.py
src/utils/: auth_jwt.py  check_db.py  create_bd.py  permissions.py
tests/: conftest.py  test_users.py
