[project]
name = "internship-effective-mobile"
version = "0.1.0"
description = "Тестовое задание на стажировку в Effective Mobile"
authors = [
    {name = "rVladislavrr",email = "rvladislavrr@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic-postgresql-enum (>=1.10.0,<2.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "uuid6 (>=2025.0.1,<2026.0.0)",
    "pyjwt[crypto] (>=2.13.0,<3.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.3,<10.0.0)"
]
prod = [
    "gunicorn (>=26.0.0,<27.0.0)"
]
